--- a/frida/templates/base.html
+++ b/frida/templates/base.html
@@ -110,12 +110,14 @@
 			function enable_ifu()
 			{
 				$('#ifu_dependent').removeClass('hide');
+				$('.ifu-dependent').removeClass('hide');
 				disable_imaging();
 			}
 
 			function disable_ifu()
 			{
 				$('#ifu_dependent').addClass('hide');
+				$('.ifu-dependent').addClass('hide');
 				enable_imaging();
 			}
 
