--- a/frida/templates/calculate_ima.html
+++ b/frida/templates/calculate_ima.html
@@ -326,13 +326,11 @@
 							<li class="list-group-item active">Sky Conditions</li>
 							<li class="list-group-item"> Airmass <span class="badge">{{ sky_conditions.airmass }}</span> </li>
 							<li class="list-group-item"> Seeing <span class="badge"> {{ sky_conditions.seeing }}</span> </li>
-							<li class="list-group-item"> Seeing Probability <span class="badge"> ????? </span> </li>
 						</ul>
 					</div>
 					<div class="col-xs-12">
 						<ul class="list-group">
 							<li class="list-group-item active">AO NGS Setup</li>
-							<li class="list-group-item"> Reference star B-R color <span class="badge">?????</span> </li>
 							<li class="list-group-item"> Reference star magnitude (R Band)<span class="badge"> {{ guide_star.Magnitude }}</span> </li>
 							<li class="list-group-item"> Reference star/target Separation <span class="badge"> {{ guide_star.Separation }}</span> </li>
 						</ul>
@@ -340,7 +338,7 @@
 					<div class="col-xs-12">
 						<ul class="list-group">
 							<li class="list-group-item active">Instrument Setup</li>
-							<li class="list-group-item"> Angular resolution scale <span class="badge">{{ frida_setup.AngularResolution }} mas/pix </span> </li>
+							<li class="list-group-item"> Angular resolution scale <span class="badge">{{ frida_setup.pixscale|astro_unit_value:'mas' }} mas/pix </span> </li>
 							<li class="list-group-item"> Camera Filter <span class="badge"> {{ obs_filter.info.Name }}</span> </li>
 							<li class="list-group-item"> Reference star/target Separation <span class="badge"> {{ guide_star.Separation }}</span> </li>
 						</ul>
@@ -357,7 +355,7 @@
 						<ul class="list-group">
 							<li class="list-group-item list-group-item-danger">Transmission Model</li>
 							<li class="list-group-item"> 
-								Signal to Noise <span class="badge">{{ signal_noise_req }}</span>
+								Signal to Noise at {{ total_exposure_time }} <span class="badge">{{ signal_noise_req }}</span>
 							</li>
 							<li class="list-group-item"> 
 								Detector Integration Time for one exposure <span class="badge">{{ dit }}</span>
@@ -369,34 +367,34 @@
 								Total exposure time <span class="badge">{{ total_exposure_time }}</span>
 							</li>
 							<li class="list-group-item"> 
-								Max. intensity at central pixel per DIT (object+sky)  <span class="badge">{{ signal_noise_req }}</span>
+								<i class="fa fa-warning text-danger"></i> Max. intensity at central pixel per DIT (object+sky)  <span class="badge">{{ signal_noise_req }}</span>
 							</li>
 							<li class="list-group-item"> 
-								Detector linearity/flat-fielding limit (for this DIT) <span class="badge">{{ dit }}</span>
+								<i class="fa fa-warning text-danger"></i> Detector linearity/flat-fielding limit (for this DIT) <span class="badge">{{ dit }}</span>
 							</li>
 							<li class="list-group-item"> 
-								Detector saturation limit (e<sup>-</sup>) <span class="badge">{{ ndit }}</span>
+								<i class="fa fa-warning text-danger"></i> Detector saturation limit (e<sup>-</sup>) <span class="badge">{{ ndit }}</span>
+							</li>
+							<li class="list-group-item "> 
+								Aperture Radius (defining the S/N reference area) <span class="badge">{{ Aperture_radius }}</span>
 							</li>
 							<li class="list-group-item"> 
-								Aperture Radius (defining the S/N reference area) <span class="badge">{{ signal_noise_req }}</span>
+								Number of pixels in Aperture <span class="badge">{{ AreaNpix }} pixels</span>
 							</li>
 							<li class="list-group-item"> 
-								Number of pixels in Aperture <span class="badge">{{ frida_setup.pixscale }}</span>
+								<i class="fa fa-warning text-danger"></i> Total number of e<sup>-</sup> in Aperture (object only)<span class="badge">????</span>
 							</li>
 							<li class="list-group-item"> 
-								Total number of e<sup>-</sup> in Aperture (object only)<span class="badge">{{ ndit }}</span>
+								<i class="fa fa-warning text-danger"></i> Total number of e<sup>-</sup> in Aperture per DIT (object only, 1 DIT) <span class="badge">????</span>
 							</li>
 							<li class="list-group-item"> 
-								Total number of e<sup>-</sup> in Aperture per DIT (object only, 1 DIT) <span class="badge">{{ total_exposure_time }}</span>
+								<i class="fa fa-warning text-danger"></i> Background (1 DIT) <span class="badge">{{ signal_noise_req }}</span>
 							</li>
 							<li class="list-group-item"> 
-								Background (1 DIT) <span class="badge">{{ signal_noise_req }}</span>
+								<i class="fa fa-warning text-danger"></i> Limiting magnitude (S/N=3) <span class="badge">{{ dit }}</span>
 							</li>
 							<li class="list-group-item"> 
-								Limiting magnitude (S/N=3) <span class="badge">{{ dit }}</span>
-							</li>
-							<li class="list-group-item"> 
-								BLIP integration time <span class="badge">{{ ndit }}</span>
+								<i class="fa fa-warning text-danger"></i> BLIP integration time <span class="badge">{{ ndit }}</span>
 							</li>
 							<li class="list-group-item"> 
 								Strehl Ratio (Target)  <span class="badge">{{ strehl_ratio }}</span>
@@ -405,13 +403,13 @@
 								Encircled Energy (Target)  <span class="badge">{{ encircled_energy }}</span>
 							</li>
 							<li class="list-group-item"> 
-								Estimated {{ filter.Name }}-band ( {{ target_info.lambda_band }} &mu;m ) on-axis Strehl Ratio  <span class="badge">{{ ndit }}</span>
+								<i class="fa fa-warning text-danger"></i> Estimated {{ filter.Name }}-band ( {{ target_info.lambda_band }} ) on-axis Strehl Ratio  <span class="badge">{{ ndit }}</span>
 							</li>
 							<li class="list-group-item"> 
 								Pixel scale in arcsec/pixel <span class="badge">{{ frida_setup.pixscale }}</span>
 							</li>
 							<li class="list-group-item"> 
-								Overall transmission <span class="badge">{{ ndit }}</span>
+								Overall transmission at {{ obs_filter.wave_median|astro_unit:'AA'}}<span class="badge">{{ throughput_lambda }}</span>
 							</li>
 						</ul>
 					</div>
