--- a/frida/templates/calculate_ima.html
+++ b/frida/templates/calculate_ima.html
@@ -437,7 +437,7 @@
 				<div class="panel panel-info">
 					<div class="panel-heading">Image</div>
 					<div class="panel-body">
-						<img src="/media/{{img_name}}">
+						<img class="img-fluid" width="100%" src="/media/{{img_name}}">
 					</div>
 				</div>
 			</div>
