--- a/frida/templates/base.html
+++ b/frida/templates/base.html
@@ -28,6 +28,7 @@
 			{
 				lcenter = $('#grating option:selected').attr('aux');
 				$('#rating_value').val(lcenter);
+				$('#ifs_lambda_ref').val(lcenter);
 			}
 			function check_extended_source()
 			{
