--- a/frida/templates/params3.html
+++ b/frida/templates/params3.html
@@ -103,7 +103,7 @@
 					<div class="panel panel-default">
 						<div class="panel-heading">&nbsp;</div>
 						<div class="panel-body">
-							<label for="dit_pattern"> &lambda; ref</label>
+							<label for="dit_pattern"> &lambda; ref [&#8491;]</label>
 							<input class="form-control" type="number" name="ifs_lambda_ref" id="ifs_lambda_ref" value="1" />
 						</div>
 					</div>
