--- a/frida/templates/calculate_ima.html
+++ b/frida/templates/calculate_ima.html
@@ -312,6 +312,11 @@
 		}
 	</script>
 	<div class="row">
+		<div class="col-xs-12">
+			<h1>Direct Imaging</h1>
+		</div>
+	</div>
+	<div class="row">
 		<div class="col-xs-12 col-md-6">
 			<div class="col-xs-12">
 				<ul class="list-group">
@@ -339,8 +344,8 @@
 				<ul class="list-group">
 					<li class="list-group-item active">Instrument Setup</li>
 					<li class="list-group-item"> Angular resolution scale <span class="badge">{{ frida_setup.pixscale|astro_unit_value:'mas' }} mas/pix </span> </li>
-					<li class="list-group-item"> Camera Filter <span class="badge"> {{ obs_filter.info.Name }}</span> </li>
 					<li class="list-group-item"> Reference star/target Separation <span class="badge"> {{ guide_star.Separation }}</span> </li>
+					<li class="list-group-item"> Camera Filter <span class="badge"> {{ obs_filter.info.Name }}</span> </li>
 				</ul>
 			</div>
 			<div class="col-xs-12 col-md-12" >
