--- a/frida/templates/params2.html
+++ b/frida/templates/params2.html
@@ -1,33 +1,35 @@
-<div class="col-md-5 col-lg-4 col-xs-6">
-	<div class="col-md-6 col-lg-6 col-xs-6">
-		<div class="panel panel-primary">
-			<div class="panel-heading">
-				<strong>Typical air mass:</strong>
-			</div>
-			<div class="panel-body text-center" >
-				<label for="airmass">Airmass</label>
-				<br/>
-				<input type="number" step="0.05" min="1.0" max="2.0" value="1.2" name="airmass" class="form-control" id="airmass">
+<div class="col-md-5 col-lg-4 col-xs-12">
+	<div class="row">
+		<div class="col-md-6 col-lg-6 col-xs-6">
+			<div class="panel panel-primary">
+				<div class="panel-heading">
+					<strong>Typical air mass:</strong>
+				</div>
+				<div class="panel-body text-center" >
+					<label for="airmass">Airmass</label>
+					<br/>
+					<input type="number" step="0.05" min="1.0" max="2.0" value="1.2" name="airmass" class="form-control" id="airmass">
+				</div>
 			</div>
 		</div>
-	</div>
-	<div class="col-md-6 col-lg-6 col-xs-6" id="image_quality">
-		<div class="panel panel-primary">
-			<div class="panel-heading">
-				<strong>Image quality: </strong>
-			</div>
-			<div class="panel-body text-center">
-				<label for="seeing">Seeing</label>
-				<br/>
-				<select name="seeing" class="form-control" id="seeing">
-					<option value="0.4">0".4</option>
-					<option value="0.6">0".6</option>
-					<option value="0.8">0".8</option>
-					<option value="0.9">0".9</option>
-					<option value="1.0">1".0</option>
-					<option value="1.2">1".2</option>
-					<option value="1.4">1".4</option>
-				</select>
+		<div class="col-md-6 col-lg-6 col-xs-6" id="image_quality">
+			<div class="panel panel-primary">
+				<div class="panel-heading">
+					<strong>Image quality: </strong>
+				</div>
+				<div class="panel-body text-center">
+					<label for="seeing">Seeing</label>
+					<br/>
+					<select name="seeing" class="form-control" id="seeing">
+						<option value="0.4">0".4</option>
+						<option value="0.6">0".6</option>
+						<option value="0.8">0".8</option>
+						<option value="0.9">0".9</option>
+						<option value="1.0">1".0</option>
+						<option value="1.2">1".2</option>
+						<option value="1.4">1".4</option>
+					</select>
+				</div>
 			</div>
 		</div>
 	</div>
