--- a/frida/templates/calculate_ima.html
+++ b/frida/templates/calculate_ima.html
@@ -348,12 +348,16 @@
 					<li class="list-group-item"> Camera Filter <span class="badge"> {{ obs_filter.info.Name }}</span> </li>
 				</ul>
 			</div>
-			<div class="col-xs-12 col-md-12" >
-				<ul class="list-group">
-					<li class="list-group-item active">Observation Setup</li>
-					<li class="list-group-item"> &nbsp; </li>
-				</ul>
+			{% if img_name != None %}
+			<div class="col-xs-12" >
+				<div class="panel panel-info">
+					<div class="panel-heading">Image</div>
+					<div class="panel-body">
+						<img class="img-fluid" width="100%" src="/media/{{img_name}}">
+					</div>
+				</div>
 			</div>
+			{% endif %}
 		</div>
 		<div class="col-xs-12 col-md-6" >
 			<div class="col-xs-12">
@@ -420,6 +424,7 @@
 			</div>
 		</div>
 	</div>
+	{% comment %}
 	<div class="row">
 		<div class="col-xs-12 col-md-6">
 			<div class="col-xs-12">
@@ -437,17 +442,8 @@
 				</ul>
 			</div>
 		</div>
-		<div class="col-xs-12 col-md-6">
-			<div class="col-xs-12" >
-				<div class="panel panel-info">
-					<div class="panel-heading">Image</div>
-					<div class="panel-body">
-						<img class="img-fluid" width="100%" src="/media/{{img_name}}">
-					</div>
-				</div>
-			</div>
-		</div>
 	</div>
+	{% endcomment %}
 	<div class="row">
 		<div class="col-md-6 col-xs-12">
 			<div class="panel panel-primary">
@@ -484,6 +480,7 @@
 			</div>
 		</div>
 	</div>
+	{% comment %}
 	<div class="row">
 		<div class="col-xs-12">
 			<ul class="list-group">
@@ -493,6 +490,7 @@
 			</ul>
 		</div>
 	</div>
+	{% endcomment %}
 <script src="https://canvasjs.com/assets/script/jquery-1.11.1.min.js"></script>
 <script src="https://canvasjs.com/assets/script/jquery.canvasjs.min.js"></script>
 {% endblock %}
