--- a/frida/templates/params3.html
+++ b/frida/templates/params3.html
@@ -76,12 +76,12 @@
 				<div class="col-xs-12 col-md-4 col-lg-2">
 					<div class="panel panel-default">
 						<div class="panel-heading text-center ">
-							<input class="" type="radio" name="type_results" value="SN_ratio"/> S/N ratio
+							<input class="" type="radio" name="type_results" value="SN_ratio" checked /> S/N ratio
 						</div>
 						<div class="panel-body">
 							<div class="col-xs-12 col-md-12 ">
 								<label for="signal_noise">S/N</label>
-								<input class="form-control" type="number" id="signal_noise" name="signal_noise" value="5.000" step="0.001"/>
+								<input class="form-control" type="number" id="signal_noise" name="signal_noise" value="5.0" step="0.5" />
 							</div>
 						</div>
 					</div>
@@ -94,7 +94,7 @@
 						<div class="panel-body">
 							<div class="col-xs-12 col-md-12">
 								<label for="N_exp"> NDIT </label>
-								<input class="form-control" type="number" name="N_exp" id="N_exp" value="100"/>
+								<input class="form-control" type="number" name="N_exp" id="N_exp" value="10"/>
 							</div>
 						</div>
 					</div>
@@ -122,7 +122,7 @@
 							</div>
 							<div class="col-xs-12 col-md-4">
 								<label for="DIT_exp" >DIT (seconds)</label>
-								<input class="form-control" type="number" name="DIT_exp" id="DIT_exp" value="20.0000" step="0.0001"/>
+								<input class="form-control" type="number" name="DIT_exp" id="DIT_exp" value="20.0" step="0.5"/>
 							</div>
 						</div>
 					</div>
