--- a/frida/templates/params1.html
+++ b/frida/templates/params1.html
@@ -127,7 +127,7 @@
 							<div class="col-md-6 col-xs-12 form-group form-inline">
 								<div class="panel panel-info">
 									<div class="panel-heading">
-										<label for="spatial_integrated_brightness">Spatially integrated brightness</label>
+										<label for="spatial_integrated_brightness">Total source brightness</label>
 									</div>
 									<div class="panel-body">
 										<div class="row">
