--- a/frida/templates/calculate_ifs.html
+++ b/frida/templates/calculate_ifs.html
@@ -367,7 +367,7 @@
 			</div>
 			<div class="col-xs-12">
 				<ul class="list-group">
-					<li class="list-group-item active">AO NGS Setup</li>
+					<li class="list-group-item active">GTCAO NGS Setup</li>
 					<li class="list-group-item"> Reference star magnitude (R Band)<span class="badge"> {{ guide_star.Magnitude }}</span> </li>
 					<li class="list-group-item"> Reference star/target Separation <span class="badge"> {{ guide_star.Separation }}</span> </li>
 				</ul>
@@ -375,15 +375,16 @@
 			<div class="col-xs-12">
 				<ul class="list-group">
 					<li class="list-group-item active">Instrument Setup</li>
-					<li class="list-group-item"> Angular resolution scale <span class="badge">{{ frida_setup.pixscale|astro_unit_value:'mas' }} mas/pix </span> </li>
-					<li class="list-group-item"> Reference star/target Separation <span class="badge"> {{ guide_star.Separation }}</span> </li>
+					<li class="list-group-item"> Angular resolution scale <span class="badge">{{ frida_setup.pixscale|astro_unit_value:'mas'|floatformat:0 }} mas/pix </span> </li>
 					<li class="list-group-item"> Grating <span class="badge"> {{ grating.Grating }} [{{grating.Central_wave}}] </span> </li>
 				</ul>
 			</div>
 			<div class="col-xs-12 col-md-12" >
 				<ul class="list-group">
 					<li class="list-group-item active">Observation Setup</li>
-					<li class="list-group-item"> &nbsp; </li>
+					<li class="list-group-item"> DIT <span class="badge">{{dit}}</span> </li>
+					<li class="list-group-item"> RON <span class="badge">{{frida_setup.detector.ron}}</span> </li>
+					<li class="list-group-item"> DIT pattern<span class="badge">{{dit_pattern}}</span> </li>
 				</ul>
 			</div>
 		</div>
@@ -407,9 +408,6 @@
 						<i class="fa fa-warning text-danger"></i> Max. intensity at central pixel per DIT (object+sky)  <span class="badge">{{ signal_noise_req }}</span>
 					</li>
 					<li class="list-group-item"> 
-						<i class="fa fa-warning text-danger"></i> Detector linearity/flat-fielding limit (for this DIT) <span class="badge">{{ dit }}</span>
-					</li>
-					<li class="list-group-item"> 
 						<i class="fa fa-warning text-danger"></i> Detector saturation limit (e<sup>-</sup>) <span class="badge">{{ ndit }}</span>
 					</li>
 					<li class="list-group-item "> 
@@ -419,7 +417,7 @@
 						Number of pixels in Aperture <span class="badge">{{ AreaNpix|floatformat:0 }} pixels</span>
 					</li>
 					<li class="list-group-item"> 
-						<i class="fa fa-warning text-danger"></i> Total number of e<sup>-</sup> in Aperture (object only)<span class="badge">????</span>
+						<i class="fa fa-warning text-danger"></i> Total number of e<sup>-</sup> in Aperture (object only)<span class="badge">signal es un array..</span>
 					</li>
 					<li class="list-group-item"> 
 						<i class="fa fa-warning text-danger"></i> Total number of e<sup>-</sup> in Aperture per DIT (object only, 1 DIT) <span class="badge">????</span>
@@ -443,46 +441,12 @@
 						<i class="fa fa-warning text-danger"></i> Estimated {{ filter.Name }}-band ( {{ target_info.lambda_band }} ) on-axis Strehl Ratio  <span class="badge">{{ ndit }}</span>
 					</li>
 					<li class="list-group-item"> 
-						Pixel scale in arcsec/pixel <span class="badge">{{ frida_setup.pixscale|astro_unit_value:'mas'|floatformat }} mas</span>
-					</li>
-					<li class="list-group-item"> 
 						Overall transmission at {{ lambda_eff|astro_unit:'AA'}}<span class="badge">{{ throughput_lambda|astro_unit_value|floatformat:2 }} {{throughput_lambda.unit}}</span>
 					</li>
 				</ul>
 			</div>
 		</div>
 	</div>
-	{% comment %}
-	<div class="row">
-		<div class="col-xs-12 col-md-6" id="chart_div2">
-			<div class='panel-group'>
-				<div class="panel panel-info">
-					<div class="panel-heading">Intermediate Values</div>
-					<div class="panel-body">
-						<ul class="list-group">
-							<li class="list-group-item"> Encircled Energy <span class="badge">{{ encircled_energy }}</span> </li>
-							<li class="list-group-item"> Aperture radius <span class="badge">{{ Aperture_radius }}</span> </li>
-							<li class="list-group-item"> Npix <span class="badge">{{ AreaNpix }}</span> </li>
-							<li class="list-group-item"> pixscale <span class="badge">{{ Pixscale }}</span> </li>
-							<li class="list-group-item"> Target Photons / s <span class="badge">{{ detected_photons_from_source }}</span> </li>
-							<li class="list-group-item"> Sky Photons  /(s sqr.arcsec)<span class="badge">{{ detected_photons_from_sky_sqarcsec }}</span> </li>
-							<li class="list-group-item"> PhotonNoise per components per unit time<span class="badge">{{ photons_noise }}</span> </li>
-							<li class="list-group-item"> Atmospfheric Transmission <span class="badge">{{ atmospheric_transmission }}</span> </li>
-							<li class="list-group-item"> Efficiency <span class="badge">{{ efficiency }}</span> </li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="col-xs-12 col-md-6" >
-			<div class="panel panel-info">
-				<div class="panel-heading">Image</div>
-				<div class="panel-body">
-				</div>
-			</div>
-		</div>
-	</div>
-	{% endcomment %}
 	<div class="row">
 		<div class="col-md-6 col-xs-12">
 			<div class="panel panel-primary">
