--- a/frida/templates/calculate_ima.html
+++ b/frida/templates/calculate_ima.html
@@ -3,6 +3,54 @@
 {% block content %}
 	<script>
 		window.onload = function () {
+		var options_phot_obj= {
+			exportEnabled: true,
+			animationEnabled: false,
+			zoomEnabled:true,
+			theme:"light2",
+			title:{
+				text: "Phi Obj"
+			},
+			subtitles: [{
+				text: "Click Legend to Hide or Unhide Data Series"
+			}],
+			axisX: {
+				title: "\u03BB [\u212B]"
+			},
+			axisY: {
+				title: "",
+				titleFontColor: "#4F81BC",
+				lineColor: "#4F81BC",
+				labelFontColor: "#4F81BC",
+				tickColor: "#4F81BC",
+				includeZero: false,
+				valueFormatString: "0.000"
+			},
+			toolTip: {
+				shared: true
+			},
+			legend: {
+				cursor: "pointer",
+				itemclick: toggleDataSeries
+			},
+			data: [{
+				type: "spline",
+				name: "Phi Obj",
+				showInLegend: true,
+				xValueFormatString: "#####.## AA",
+				yValueFormatString: "0.###",
+				dataPoints: [
+					{% for my_value in phot_obj %}
+						{% with lambda=wave_array|list_value:forloop.counter0 %}
+						{ x: {{ lambda.value }}, y: {{my_value.value}} },
+						{% endwith %}
+					{% endfor %}
+				]
+			}
+			]
+		};
+		$("#phot_objContainer").CanvasJSChart(options_phot_obj);
+
 		var options = {
 			exportEnabled: true,
 			animationEnabled: false,
@@ -299,6 +347,7 @@
 			]
 		};
 		$("#EEContainer").CanvasJSChart(options_EE);
+
 		{% endif %}
 
 		function toggleDataSeries(e) {
@@ -474,6 +523,14 @@
 			</div>
 		</div>
 		{% endif %}
+		<div class="col-md-6 col-xs-12">
+			<div class="panel panel-primary">
+				<div class="panel-heading">Phi Obj</div>
+				<div class="panel-body">
+					<div id="phot_objContainer" style="height:400px; max-width:920px; width:100%; margin: 0px auto;"></div>
+				</div>
+			</div>
+		</div>
 	</div>
 	{% comment %}
 	<div class="row">
