--- a/frida/templates/params1.html
+++ b/frida/templates/params1.html
@@ -283,7 +283,8 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-xs-12 col-md-12"> <input type="submit" class="btn btn-block btn-lg btn-warning" value="Calculate" /></div>
+			<div class="col-xs-10 col-md-11"> <input type="submit" class="btn btn-block btn-lg btn-warning" value="Calculate" /></div>
+			<div class="col-xs-2 col-md-1"> <a class="btn btn-primary btn-block btn-lg" target="_blank" href="{% url 'docs-p1' %}"><i class="fa fa-question"></i></a></div>
 		</div>
 	</div>
 </div>
