--- a/frida/templates/params2.html
+++ b/frida/templates/params2.html
@@ -23,7 +23,7 @@
 					<select name="seeing" class="form-control" id="seeing">
 						<option value="0.4">0".4</option>
 						<option value="0.6">0".6</option>
-						<option value="0.8">0".8</option>
+						<option selected value="0.8">0".8</option>
 						<option value="0.9">0".9</option>
 						<option value="1.0">1".0</option>
 						<option value="1.2">1".2</option>
@@ -58,6 +58,7 @@
 		</div>
 	</div>
 </div>
-<div class="col-xs-12">
+<div class="col-xs-10 col-md-11">
 	<input type="submit" class="btn btn-lg btn-block btn-warning" value="Calculate" />
 </div>
+<div class="col-xs-2 col-md-1"> <a class="btn btn-primary btn-block btn-lg"><i class="fa fa-question"></i></a></div>
