--- a/frida/templates/params3.html
+++ b/frida/templates/params3.html
@@ -146,9 +146,10 @@
 			</div>
 		</div>
 	</div>
-	<div class="col-xs-12">
+	<div class="col-xs-10 col-md-11">
 		<input type="submit" class="btn btn-lg btn-warning btn-block" value="Calculate" />
 	</div>
+	<div class="col-xs-2 col-md-1"> <a class="btn btn-primary btn-block btn-lg"><i class="fa fa-question"></i></a></div>
 </div>
 <script>
 	change_grating_value();
