--- a/frida/templates/params1.html
+++ b/frida/templates/params1.html
@@ -2,7 +2,7 @@
 <div class="row">
 	<div class="col-xs-12 col-md-3 form-inline">
 		<div class="panel panel-primary">
-			<div class="panel-heading"> <strong>Spectral distribution: <a href="#" class="badge"> more info </a></strong></div>
+			<div class="panel-heading"> <strong>Spectral distribution: <a href="{% url 'docs-p1' %}#spectral-distribution" class="badge"> more info </a></strong></div>
 			<div class="panel-body">
 				<div class="panel panel-info">
 					<div class="panel-heading">
