--- a/frida/templates/doc-params1.html
+++ b/frida/templates/doc-params1.html
@@ -1,30 +1,5 @@
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
-<html xmlns="http://www.w3.org/1999/xhtml">
-  <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Spectral distribution &#8212; FRIDA ETC User&#39;s Manual 0.5 documentation</title>
-    <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
-    <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
-    <script type="text/javascript" src="_static/documentation_options.js"></script>
-    <script type="text/javascript" src="_static/jquery.js"></script>
-    <script type="text/javascript" src="_static/underscore.js"></script>
-    <script type="text/javascript" src="_static/doctools.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <link rel="index" title="Index" href="genindex.html" />
-    <link rel="search" title="Search" href="search.html" />
-    <link rel="next" title="GTC Adaptive Optics" href="params2.html" />
-    <link rel="prev" title="Welcome to FRIDA ETC User’s Manual’s documentation!" href="index.html" />
-   
-  <link rel="stylesheet" href="_static/custom.css" type="text/css" />
-  
-  
-  <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9" />
-
-  </head><body>
+{% extends "base.html" %}
+{%block content%}
   
 
     <div class="document">
@@ -33,7 +8,7 @@
           <div class="body" role="main">
             
   <div class="section" id="spectral-distribution">
-<h1>Spectral distribution<a class="headerlink" href="#spectral-distribution" title="Permalink to this headline">¶</a></h1>
+<h1 class="alert alert-info">Spectral distribution<a class="headerlink" href="#spectral-distribution" title="Permalink to this headline">¶</a></h1>
 <p>The source spectrum is selected from predefined spectra (black-body or power-law), available libraries of stellar and non-stellar spectra, a user-defined spectra and an emission line can also be added.</p>
 <div class="section" id="stellar-library">
 <h2>Stellar library<a class="headerlink" href="#stellar-library" title="Permalink to this headline">¶</a></h2>
@@ -64,67 +39,8 @@ Different morphologies</p>
 </div>
 
 
-          </div>
-        </div>
-      </div>
-      <div class="sphinxsidebar" role="navigation" aria-label="main navigation">
-        <div class="sphinxsidebarwrapper">
-  <h3><a href="index.html">Table Of Contents</a></h3>
-  <ul>
-<li><a class="reference internal" href="#">Spectral distribution</a><ul>
-<li><a class="reference internal" href="#stellar-library">Stellar library</a></li>
-<li><a class="reference internal" href="#non-stellar-library">Non-Stellar library</a></li>
-</ul>
-</li>
-<li><a class="reference internal" href="#source-brightness">Source Brightness</a></li>
-<li><a class="reference internal" href="#spatial-profile">Spatial Profile</a></li>
-</ul>
-<div class="relations">
-<h3>Related Topics</h3>
-<ul>
-  <li><a href="index.html">Documentation overview</a><ul>
-      <li>Previous: <a href="index.html" title="previous chapter">Welcome to FRIDA ETC User’s Manual’s documentation!</a></li>
-      <li>Next: <a href="params2.html" title="next chapter">GTC Adaptive Optics</a></li>
-  </ul></li>
-</ul>
 </div>
-  <div role="note" aria-label="source link">
-    <h3>This Page</h3>
-    <ul class="this-page-menu">
-      <li><a href="_sources/params1.rst.txt"
-            rel="nofollow">Show Source</a></li>
-    </ul>
-   </div>
-<div id="searchbox" style="display: none" role="search">
-  <h3>Quick search</h3>
-    <div class="searchformwrapper">
-    <form class="search" action="search.html" method="get">
-      <input type="text" name="q" />
-      <input type="submit" value="Go" />
-      <input type="hidden" name="check_keywords" value="yes" />
-      <input type="hidden" name="area" value="default" />
-    </form>
-    </div>
 </div>
-<script type="text/javascript">$('#searchbox').show(0);</script>
-        </div>
-      </div>
-      <div class="clearer"></div>
+</div>
     </div>
-    <div class="footer">
-      &copy;2018, J.A. Acosta Pulido.
-      
-      |
-      Powered by <a href="http://sphinx-doc.org/">Sphinx 1.7.2</a>
-      &amp; <a href="https://github.com/bitprophet/alabaster">Alabaster 0.7.10</a>
-      
-      |
-      <a href="_sources/params1.rst.txt"
-          rel="nofollow">Page source</a>
-    </div>
-
-    
-
-    
-  </body>
-</html>
+{%endblock%}
