--- a/frida/templates/params2.html
+++ b/frida/templates/params2.html
@@ -61,4 +61,4 @@
 <div class="col-xs-10 col-md-11">
 	<input type="submit" class="btn btn-lg btn-block btn-warning" value="Calculate" />
 </div>
-<div class="col-xs-2 col-md-1"> <a class="btn btn-primary btn-block btn-lg"><i class="fa fa-question"></i></a></div>
+<div class="col-xs-2 col-md-1"> <a class="btn btn-primary btn-block btn-lg" target="_blank" href="{% url 'docs-p2' %}"><i class="fa fa-question"></i></a></div>
