--- a/frida/templates/params3.html
+++ b/frida/templates/params3.html
@@ -21,9 +21,9 @@
 					</div>
 					<div class="panel-body">
 						<div class="col-md-8 col-md-offset-2 col-xs-12">
-							<select class="form-control form-control-sm" name="filter" id="filter" >
+							<select class="form-control form-control-sm" name="filter" id="filter" onchange="get_dif_limit();">
 							{% for filter in list_filters %}
-								<option value='{{ filter.Code }}'>{{ filter.Name }}</option>
+							<option value='{{ filter.Code }}'>{{ filter.Name }}</option><span class="hide" id="code_{{filter.code}}">{{filter.Difr_limit}}</span>
 							{% endfor %}
 							</select>
 						</div>
@@ -73,33 +73,32 @@
 				<strong>Calculation method:</strong> <a href="#" class="badge">more info</a>
 			</div>
 			<div class="panel-body">
-				<div class="col-xs-12 col-md-4 col-lg-2">
+				<div class="col-xs-12 col-md-4 col-lg-4">
 					<div class="panel panel-default">
-						<div class="panel-heading text-center ">
-							<input class="" type="radio" name="type_results" value="SN_ratio" checked /> S/N ratio
+						<div class="panel-heading text-center ">&nbsp;
+								
 						</div>
 						<div class="panel-body">
-							<div class="col-xs-12 col-md-12 ">
-								<label for="signal_noise">S/N</label>
+							<div class="col-xs-6 col-md-6 ">
+								<label for="signal_noise"><input class="" type="radio" name="type_results" value="SN_ratio" checked /> S/N</label>
 								<input class="form-control" type="number" id="signal_noise" name="signal_noise" value="5.0" step="0.5" />
 							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-xs-12 col-md-4 col-lg-2">
-					<div class="panel panel-default">
-						<div class="panel-heading text-center ">
-							<input class="" type="radio" name="type_results" value="exposure_time"/> Exposure Time
-						</div>
-						<div class="panel-body">
-							<div class="col-xs-12 col-md-12">
-								<label for="N_exp"> NDIT </label>
+							<div class="col-xs-6 col-md-6">
+								<label for="N_exp"> <input class="" type="radio" name="type_results" value="exposure_time"/> NDIT </label>
 								<input class="form-control" type="number" name="N_exp" id="N_exp" value="10"/>
+							</div>
+							<div class="col-xs-12 col-md-6">
+								<label for="DIT_exp" >DIT (seconds)</label>
+								<input class="form-control" type="number" name="DIT_exp" id="DIT_exp" value="20.0" step="0.5"/>
+							</div>
+							<div class="col-xs-12 col-md-6">
+								<label for="dit_pattern"> DIT Pattern </label>
+								<input class="form-control" type="number" name="dit_pattern" id="dit_pattern" value="1" disabled/>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="col-xs-12 col-md-4 col-lg-2 ifu-dependent hide">
+				<div class="col-xs-12 col-md-8 col-lg-8 ifu-dependent hide">
 					<div class="panel panel-default">
 						<div class="panel-heading">&nbsp;</div>
 						<div class="panel-body">
@@ -110,19 +109,19 @@
 				</div>
 				<div class="col-xs-12 col-md-12 col-lg-6 ">
 					<div class="panel panel-default">
-						<div class="panel-heading text-center ">&nbsp;</div>
+						<div class="panel-heading text-center ">Aperture Radius</div>
 						<div class="panel-body">
 							<div class="col-xs-12 col-md-4">
-								<label for="fcore"> FCore </label>
+								<label for="fcore"> Factor </label>
 								<input class="form-control" type="number" name="fcore" id="fcore" value="1.5" step="0.01"/>
+							</div> 
+							<div class="col-xs-12 col-md-4">
+								<label>x &lambda;/D [mas] </label>
+								 <input class="form-control" type="text" name="limit" disabled value="0" id="fcore_fix">
 							</div>
 							<div class="col-xs-12 col-md-4">
-								<label for="dit_pattern"> DIT Pattern </label>
-								<input class="form-control" type="number" name="dit_pattern" id="dit_pattern" value="1" disabled/>
-							</div>
-							<div class="col-xs-12 col-md-4">
-								<label for="DIT_exp" >DIT (seconds)</label>
-								<input class="form-control" type="number" name="DIT_exp" id="DIT_exp" value="20.0" step="0.5"/>
+								<label>=Aperure Radius </label>
+								 <input class="form-control" type="text" disabled value="0" id="fcore_fix" name="aperture">
 							</div>
 						</div>
 					</div>
@@ -149,8 +148,9 @@
 	<div class="col-xs-10 col-md-11">
 		<input type="submit" class="btn btn-lg btn-warning btn-block" value="Calculate" />
 	</div>
-	<div class="col-xs-2 col-md-1"> <a class="btn btn-primary btn-block btn-lg"><i class="fa fa-question"></i></a></div>
+	<div class="col-xs-2 col-md-1"> <a class="btn btn-primary btn-block btn-lg" target="_blank" href="{%url 'docs-p3'%}"><i class="fa fa-question"></i></a></div>
 </div>
 <script>
 	change_grating_value();
+	function get_dif_limit
 </script>
