--- a/frida/templates/params3.html
+++ b/frida/templates/params3.html
@@ -136,9 +136,10 @@
 					</div>
 					<div class="panel-body">
 						<div class="row " id="naco">
-							<div class="col-xs-4 text-center"> <input type="checkbox" name="2d_psf" checked/> 2-D PSF image (jpg and FITS) (point source only)</div>
-							<div class="col-xs-4 text-center"> <input type="checkbox" name="enc_energy_aperture_radius" /> Encircled Energy as a function of Aperture Radius (point source only)</div>
-							<div class="col-xs-4 text-center"> <input type="checkbox" name="sn_as_exp_time" checked/> S/N as a function of Exposure Time </div>
+							<div class="col-xs-3 text-center"> <input type="checkbox" name="addnoise" checked/> Add noise to PSF</div>
+							<div class="col-xs-3 text-center"> <input type="checkbox" name="2d_psf" checked/> 2-D PSF image (png and FITS) (point source only)</div>
+							<div class="col-xs-3 text-center"> <input type="checkbox" name="enc_energy_aperture_radius" /> Encircled Energy as a function of Aperture Radius (point source only)</div>
+							<div class="col-xs-3 text-center"> <input type="checkbox" name="sn_as_exp_time" checked/> S/N as a function of Exposure Time </div>
 						</div>
 					</div>
 				</div>
